# MyFEMuS

./: .gitignore  CMakeLists.txt  README.md  UseFemus.CMake.in  developers.html  index.html  params.json
applications/: CMakeLists.txt
applications/AD/ex1/: ex1.cpp
applications/AD/ex2/: ex2.cpp
applications/AD/ex3/: ex3.cpp
applications/AMR/: CMakeLists.txt
applications/Conformal/: CMakeLists.txt
applications/Conformal/ex1/: ex1.cpp
applications/Conformal/ex10/: ex10.cpp
applications/Conformal/ex11/: ex11.cpp
applications/Conformal/ex2/: ex2.cpp
applications/Conformal/ex3/: ex3.cpp
applications/Conformal/ex5/: ex5.cpp
applications/Conformal/ex6/: ex6.cpp
applications/Conformal/ex7/: ex7.cpp
applications/Conformal/ex8/: ex8.cpp
applications/Conformal/ex9/: ex9.cpp
applications/Conformal/include/: supportFunctions.hpp  (+19 more)
applications/FSI/: CMakeLists.txt
applications/ISM/: CMakeLists.txt
applications/MGAMR/: CMakeLists.txt
applications/MPM_FEM/: CMakeLists.txt
applications/MPM_FSI/: CMakeLists.txt
applications/MultiPhase/: CMakeLists.txt
applications/Nitsche/: CMakeLists.txt  questions
applications/Nitsche/ex4/: CMakeLists.txt  ex4.cpp
applications/Nitsche/ex4Rec/: CMakeLists.txt  ex4Rec.cpp
applications/NonLocal/: CMakeLists.txt
applications/NonLocal/ex10/: ex10.cpp
applications/NonLocal/ex10/include/: GetNormal.hpp  NonLocal.hpp  RefineElement.hpp  nonlocal_assembly_adaptive.hpp
applications/NonLocal/ex11/: BestFitPlane.hpp  CDWeightsOld.hpp  GenerateTriangles.hpp  ex11.cpp
applications/NonLocal/ex20/: ex20.cpp
applications/NonLocal/ex20/include/: GetNormal.hpp  NonLocal.hpp  RefineElement.hpp  nonlocal_assembly_adaptive.hpp
applications/NonLocal/ex20/include/parabInt/: Rebuild.hpp  cutFemWeightParabola.hpp  parabolaIntegration.hpp  polyWPar.cpp  polyWPar.hpp
applications/NonLocal/ex20/input/salome/: martaTest4QuadUnstr.med
applications/NonLocal/ex21/: ex21.cpp
applications/NonLocal/ex3/: ex3.cpp
applications/NonLocal/ex4/: ex4.cpp
applications/NonLocal/ex6/: ex6.cpp
applications/NonLocal/ex7/: ex7.cpp
applications/NonLocal/ex8/: ex8.cpp
applications/NonLocal/ex9/: ex9.cpp
applications/NonLocal/ex9/include/: NonLocal.hpp  RefineElement.hpp  nonlocal_assembly_adaptive.hpp
applications/NonLocal/ex9/input/: martaTest4UnstrWC.neu
applications/NonLocal/ex9/input/gambit/: martaTest4UnstrWC.dbs
applications/NonLocal/include/: NonLocal.hpp  OctTreeElement.hpp  OldRefineElement.hpp  Oldnonlocal_assembly_adaptive.hpp  RefineElement.hpp  local_FETI_assembly.hpp  nonlocal_assembly_2D_FETI.hpp  nonlocal_assembly_2D_FETI_floating.hpp  nonlocal_assembly_adaptive.hpp
applications/NonLocal/input/: FETI_domain_floating.neu  FETI_domain_local.neu  martaTest4-3D-tet.neu  martaTest4-3D.neu  martaTest4-3Dfine.neu  martaTest4Fine.neu  martaTest4Finer.neu  martaTest4Tri.neu  martaTest4Unstr.neu  martaTest4Unstr2.neu  martaTest4_6x8.neu
applications/NonLocal/input/gambit/: FETI_domain_floating.dbs  FETI_domain_local.dbs  martaTest4-3D-tet.dbs  martaTest4-3D.dbs  martaTest4-3Dfine.dbs  martaTest4Fine.dbs  martaTest4Finer.dbs  martaTest4Tri.dbs  martaTest4Unstr2.dbs  martaTest4_6x8.dbs
applications/NonLocal/input/gambit/GAMBIT.11273/: jou  martaTest4_6x8.dbs  trn
applications/NonLocal/input/salome/: martaTest4QuadUnstr2.med
applications/OptimalControl/: CMakeLists.txt
applications/PCFieldSplit/: CMakeLists.txt
applications/Poisson/: CMakeLists.txt
applications/Poisson_AMR/: CMakeLists.txt
applications/QuasiConformal/: CMakeLists.txt
applications/RK/: CMakeLists.txt
applications/Refinement/: CMakeLists.txt
applications/SW/: CMakeLists.txt
applications/TimeOptCtrl/: CMakeLists.txt
applications/Tumor/: CMakeLists.txt
applications/UQ/: CMakeLists.txt
applications/Willmore/: CMakeLists.txt
applications/cutFEM/: CMakeLists.txt
applications/cutFEM/ex2/: CMakeLists.txt  ex2.cpp
applications/tutorial/: CMakeLists.txt
cmake-modules/: FindEigen3.cmake  FindHDF5.cmake  FindMETIS.cmake  FindSLEPc.cmake  FindSLEPcApple.cmake  femusMacroBuildApplication.cmake
src/: CMakeLists.txt
src/algebra/: AsmPetscLinearEquationSolver.cpp  GmresPetscLinearEquationSolver.cpp  NumericVector.hpp  PetscMatrix.cpp  PetscMatrix.hpp  PetscPreconditioner.cpp  PetscVector.cpp  PetscVector.hpp  SparseMatrix.cpp  SparseMatrix.hpp
src/enums/: GeomElTypeEnum.hpp
src/equations/: LinearImplicitSystem.cpp  SystemTwo.cpp  TimeLoop.cpp  TransientSystem.cpp  TransientSystem.hpp
src/fe/: Basis.hpp  ElemType.cpp  ElemType.hpp  ElemType1.cpp  Fem.hpp  Quadrilateral.cpp
src/ism/: Line.cpp  Line.hpp  Marker.cpp  Marker.hpp
src/mesh/: Elem.cpp  Elem.hpp  Mesh.cpp  MeshASMPartitioning.cpp  SalomeIO.cpp  SalomeIO.hpp
src/meshGencase/: GenCase.cpp  MultiLevelMeshTwo.cpp  MultiLevelMeshTwo.hpp
src/parallel/: MyVector.cpp  MyVector.hpp
src/quadrature/: GaussPoints.cpp  GaussPoints.hpp  HexGaussLegendrePoints.hpp  HexGaussLobattoPoints.hpp  HexGaussPoints.cpp  HexGaussPoints.hpp  LineGaussLegendrePoints.cpp  LineGaussLegendrePoints.hpp  LineGaussLobattoPoints.cpp  LineGaussLobattoPoints.hpp  LineGaussPoints.cpp  LineGaussPoints.hpp  PointGaussPoints.cpp  PointGaussPoints.hpp  QuadGaussLegendrePoints.cpp  QuadGaussLegendrePoints.hpp  QuadGaussLobattoPoints.cpp  QuadGaussLobattoPoints.hpp  QuadGaussPoints.cpp  QuadGaussPoints.hpp  TetGaussLegendrePoints.hpp  TetGaussLobattoPoints.hpp  TetGaussPoints.cpp  TetGaussPoints.hpp  TriGaussLegendrePoints.cpp  TriGaussLegendrePoints.hpp  TriGaussLobattoPoints.cpp  TriGaussLobattoPoints.hpp  TriGaussPoints.cpp  TriGaussPoints.hpp  WedgeGaussLegendrePoints.hpp  WedgeGaussLobattoPoints.hpp  WedgeGaussPoints.cpp  WedgeGaussPoints.hpp
src/solution/: Writer.cpp
src/utils/: FemusInit.cpp  FemusInit.hpp
stylesheets/: carousel.css  stylesheet.css
unittests/: CMakeLists.txt
unittests/testFSISteady/: CMakeLists.txt
unittests/testNSSteadyDD/: CMakeLists.txt
unittests/testSVD2NormCondNumb/: CMakeLists.txt
unittests/test_mesh_read_write/: CMakeLists.txt  test_mesh_read_write.cpp
(+438 files in other folders)
