# CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
# 
# get_filename_component(APP_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
# 
# set(THIS_APPLICATION ${APP_FOLDER_NAME})
# 
# PROJECT("${APP_FOLDER_NAME_PARENT}_${THIS_APPLICATION}")
# 
# 
# SET(MAIN_FILE "${THIS_APPLICATION}") # the name of the main file with no extension
# SET(EXEC_FILE "${APP_FOLDER_NAME_PARENT}_${MAIN_FILE}") # the name of the executable file
# 
# femusMacroBuildApplication(${MAIN_FILE} ${EXEC_FILE})

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(HAVE_HDF5)

get_filename_component(APP_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
set(THIS_APPLICATION ${APP_FOLDER_NAME})

PROJECT(${THIS_APPLICATION})

# set(CMAKE_VERBOSE_MAKEFILE on)

ADD_EXECUTABLE(${THIS_APPLICATION}
${CMAKE_PROJECT_DIR}ex4Rec.cpp 
${CMAKE_PROJECT_DIR}eigen.cpp
)

TARGET_LINK_LIBRARIES(${THIS_APPLICATION} femus)
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} b64)
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} jsoncpp)
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} adept)

IF(FPARSER_FOUND)
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${FPARSER_LIBRARY})
ENDIF(FPARSER_FOUND)

IF(MPI_FOUND) 
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_CXX_LIBRARIES})
  #TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)

IF(SLEPC_FOUND)
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION}  ${SLEPC_LIBARIES})
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION}  SLEPC::slepc SLEPC::slepc_static)
ENDIF(SLEPC_FOUND)

ENDIF(HAVE_HDF5)
